--- a/rogue.desktop
+++ b/rogue.desktop
@@ -1,5 +1,12 @@
 [Desktop Entry]
-Name=rogue
+Name=Rogue
+Name[ar]=روج
+Name[bg]=Измамник
+Name[eo]=Fripono
+Name[lt]=Išdykėlis
+Name[lv]=Blēdis
+Name[pt_BR]=Selvagem
+Name[uk]=Тать
 Comment=The very first roguelike game
 Comment[pl]=Najpierwsza gra roguelike
 Icon=rogue.png
