- s/^Terminal=0/Terminal=false/ s/^Terminal=1/Terminal=true/ to conform   freedesktop.org desktop-entry specification
Changed files:
    rogue.desktop -> 1.4

--- a/rogue.desktop
+++ b/rogue.desktop
@@ -11,7 +11,7 @@ Comment=The very first roguelike game
 Comment[pl]=Najpierwsza gra roguelike
 Icon=rogue.png
 Exec=/usr/games/rogue
-Terminal=1
+Terminal=true
 Type=Application
 Encoding=UTF-8
 # vi: encoding=utf-8
