- fixed path in desktop and Categories
Changed files:
    rogue.desktop -> 1.6

--- a/rogue.desktop
+++ b/rogue.desktop
@@ -10,9 +10,9 @@ Name[uk]=Тать
 Comment=The very first roguelike game
 Comment[pl]=Najpierwsza gra roguelike
 Icon=rogue.png
-Exec=/usr/games/rogue
+Exec=rogue
 Terminal=true
 Type=Application
-Categories=Game;X-RPGGame;
+Categories=ConsoleOnly;Game;RolePlaying;
 Encoding=UTF-8
 # vi: encoding=utf-8
