- massive change ( validate errors warrings from desktop-file-validate)   - sed -i 's,Encoding=UTF-8,,g' *.desktop   - sed -i "s,.png,,1" `grep -l 'Icon=[^/].*\.png' *.desktop`   - sed -i "s,MimeType=.*,\0;,g" `grep "MimeType.*semicolon" validate |awk '{print $1}' |tr ":" " "`   - sed -i 's,MapNotify=.*,,g' *.desktop   - sed -i '/^$/d' *.desktop - not all error/warrings validated
Changed files:
    rogue.desktop -> 1.7

--- a/rogue.desktop
+++ b/rogue.desktop
@@ -9,10 +9,9 @@ Name[pt_BR]=Selvagem
 Name[uk]=Тать
 Comment=The very first roguelike game
 Comment[pl]=Najpierwsza gra roguelike
-Icon=rogue.png
+Icon=rogue
 Exec=rogue
 Terminal=true
 Type=Application
 Categories=ConsoleOnly;Game;RolePlaying;
-Encoding=UTF-8
 # vi: encoding=utf-8
